# bravo

./: Makefile  README.md  bravo.ml  bravo.opam  castle_bravo.ml  check.ml  decl.ml  dune  elab.ml  error.ml  expr.ml  ident.ml  lexer.mll  module.ml  parser.mly  primitives.txt  repl.ml  token.ml  trace.ml
.github/workflows/: main.yml
doc/: Makefile  bravo.tex  bravo.vtc
experiments/: N3000.bravo  cat.castle-bravo  circle.anders  circle.bravo  circle.castle-bravo  equiv.bravo  equiv.castle-bravo  fiber.anders  fiber.bravo  fiber.castle-bravo  funext.bravo  inf-group.bravo  integer.bravo  path.bravo  path.castle-bravo  reals.bravo  test.bravo  test.castle-bravo  univalence.bravo  univalence.castle-bravo  ∞-group.castle-bravo
share/castle-bravo-vscode/: castle-bravo-configuration.json  package.json
share/castle-bravo-vscode/syntaxes/: castle-bravo.tmLanguage.json
