opam-version: "2.0"
name: "bravo"
version: "0.8.0"
maintainer: "Namdak Tonpa <maxim@synrc.com>"
authors: [
  "Namdak Tonpa @5HT"
  "Siegmentation Fault @siegment"
]
homepage: "https://github.com/groupoid/castle.bravo"
bug-reports: "https://github.com/groupoid/castle.bravo/issues"
dev-repo: "git+https://github.com/groupoid/castle.bravo"
synopsis: "HoTT-∂ Type System with definitional Path-β "
license: "ISC"
depends: [
  "dune" {>= "2.0"}
  "zarith" {>= "1.12"}
  "ocaml" {>= "4.10"}
  "menhir" {>= "20200123"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
